[gd_scene load_steps=2 format=3 uid="uid://b8hhr6apjdsfk"]

[ext_resource type="Script" path="res://scripts/TableRow.gd" id="1_cs4oh"]

[node name="TableRow" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_cs4oh")

[node name="ColumnName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="ColumnScore" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="ColumnTime" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2

[node name="ColumnDatetime" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2
